<resources>
    <string name="app_name">PSI Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_regions">RegionsActivity</string>
    <string name="warning_good">Normal activities</string>
    <string name="warning_unhealthy">Reduce prolonged or strenuous outdoor physical exertion</string>
    <string name="warning_very_unhealthy">Avoid prolonged or strenuous outdoor physical exertion</string>
    <string name="warning_hazardous">Minimise outdoor activity</string>
    <string name="status_good">Good</string>
    <string name="status_moderate">Moderate</string>
    <string name="status_unhealthy">Unhealthy</string>
    <string name="status_very_unhealthy">Very Unhealthy</string>
    <string name="status_hazardous">Hazardous</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="SO2">24-hr SO2</string>
    <string name="PM10">24-hr PM10</string>
    <string name="NO2">1-hr NO2</string>
    <string name="O3">8-hr O3</string>
    <string name="CO">8-hr CO</string>
    <string name="PM25">24-hr PM2.5</string>
    <string name="psi">24-hr PSI</string>
    <string name="search">Search</string>
    <string name="pick_a_region">Pick a region</string>
    <string name="region">Region</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="time">Time</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="date">Date</string>
    <string name="reading">Reading</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
