<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eventdee.psimonitor.activity.SearchActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="24sp" />

            <Button
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:hint="@string/pick_a_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/time"
                android:textSize="24sp" />

            <Button
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:hint="@string/pick_a_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/region"
                android:textSize="24sp" />

            <Button
                android:id="@+id/regionPicker"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:hint="@string/pick_a_region" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@android:color/white" />

</RelativeLayout>
